--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>shopping wher strpie </h1>
-    <form action="/checkout" method="post">
+    <form action="/create-checkout-session" method="post">
         <input type="submit" value="process to chekout">
     </form>
 </body>
